amo fix
